--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,5 @@
 :root {
+    --primary-color: #EE4D2D;
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
@@ -39,3 +40,5 @@ html {
         opacity: 1
     }
 }
+
+
