--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
     display:none;
     animation:fadeIn ease-in 0.8s;
 }
-
+ /* Vùng đệm để hover */
 .navbar__qrcode::before {
     position: absolute;
     width: 100%;
@@ -71,6 +71,8 @@
     font-size: 1.4rem;
     color: var(--white-color);
     font-weight: 300;
+    position: relative;
+    
 }
 
 .navbar__left--item-link:hover, .navbar__right--item-link:hover {
@@ -89,6 +91,7 @@
     font-weight: 400;
 }
 
+/* show QR code when hover */
 .navbar__left--item--show-qr:hover .navbar__qrcode {
     display:block;
 }
@@ -117,6 +120,131 @@
 .navbar__left--item--no-pointer {
     color: var(--white-color);
     cursor: text;
+}
+
+
+/* Header notification */
+.navbar__notification {
+    position: absolute;
+    top: 150%;
+    right:0;
+    width: 304px;
+    border: 1px solid #D3D3D3;
+    background-color: var(--white-color);
+    display:none;
+    transform-origin: 90% top;
+    animation: navbarNotificationGrowth ease-in 0.3s;
+
+}
+
+@keyframes navbarNotificationGrowth {
+    from {
+        opacity: 0;
+        transform: scale(0)
+
+    }
+    to {
+        opacity: 1;
+        transform: scale(0)
+    }
+}
+
+
+.navbar__notification-header {
+    height: 40px;
+    background-color: var(--white-color);
+    cursor: default;
+
+}
+
+.navbar__notification-header h3 {
+    color: #999;
+    font-weight: 300;
+    margin: 0 0 0 12px;
+    font-size: 1.4rem;
+    line-height: 40px;
+
+}
+
+.navbar__notification-list {
+    padding-left: 0px;
+    list-style: none;
+
+}
+
+.navbar__notification-item {
+    display:flex;
+}
+
+.navbar__notification-link {
+    display:flex;
+    padding: 12px;
+    width: 100%;
+    text-decoration: none;
+
+}
+.navbar__notification-link:hover {
+    background-color:rgba(235, 221, 221, 0.2);
+    cursor: pointer;
+}
+
+.navbar__notification-img {
+    width: 48px;
+    object-fit: contain;
+
+}
+
+.navbar__notification-info {
+    margin-left: 12px;
+
+}
+
+.navbar__notification-name {
+    display: block;
+    font-size: 1.4rem;
+    color: var(--black-color);
+
+}
+
+.navbar__notification-descriotion {
+    display: block;
+    font-size: 1.2rem;
+    padding-top: 4px;
+    line-height 1.4em;
+
+}
+
+.navbar__notification-footer {
+    background-color:rgba(241, 231, 231, 0.2);
+    display: flex;
+    line-height:30px;
+    
+}
+
+.navbar__notification-footer-btn {
+    text-decoration: none;
+    margin: auto;
+    color: var(--black-color);
+    padding: 8px 16px;
+}
+
+.navbar__notification-footer:hover {
+    cursor: pointer;
+    background-color:rgba(199, 190, 190, 0.2);
+}
+
+.navbar__right--item-show-notification:hover .navbar__notification {
+    display:block;
+}
+
+.navbar__notification::before {
+    position: absolute;
+    width: 100%;
+    height:30px;
+    content:"";
+    display:block;
+    left: 0px;
+    top:-16px;
 }
 
 
