--- a/css/main.css
+++ b/css/main.css
@@ -245,6 +245,26 @@
     display:block;
     left: 0px;
     top:-16px;
+    
+    /* right:12px; */
+    /* top:-30px;
+    border: 20px solid;
+    border-color: transparent transparent var(--white-color)  transparent; */
+    
+}
+
+
+.navbar__notification::after {
+    position: absolute;
+    /* width: 100%; */
+    /* height:30px; */
+    content:"";
+    display:block;
+    right:12px;
+    top:-30px;
+    border: 20px solid;
+    border-color: transparent transparent var(--white-color)  transparent;
+    
 }
 
 
