--- a/css/main.css
+++ b/css/main.css
@@ -346,3 +346,76 @@
 }
 
 
+/* Search */
+
+.search {
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    margin-left: 8px;
+
+}
+
+.search--logo {
+    width: 200px;
+    color: var(--white-color);
+
+}
+
+.search--log-img {
+    width: 160px;
+    color: var(--white-color);
+
+}
+
+.search__main {
+    background-color: var(--white-color);
+    height: 34px;
+    flex: 1;
+    border-radius: 2px;
+
+}
+
+.search__cart {
+    width: 140px;
+    text-align: center;
+   
+}
+
+.search__cart-icon {
+    color: #fff;
+    font-size: 4rem;
+    text-align: center;
+    
+}
+
+.navbar-horizontal {
+    height: 20px;
+    display: flex;
+    position: relative;
+    margin-left: 150px;
+    align-items: center;
+
+}
+
+.navbar-horizontal__list {
+    list-style: none;
+    position: relative;
+
+}
+
+.navbar-horizontal__item {
+    margin-left: 10px;
+    position: relative;
+    display: inline-block;
+
+}
+
+.navbar-horizontal__item-link {
+    text-decoration: none;
+    color: var(--white-color);
+    font-size: 1.3rem;
+    line-height: 1.4rem;
+
+}
+
