--- a/css/main.css
+++ b/css/main.css
@@ -370,10 +370,25 @@
 
 .search__main {
     background-color: var(--white-color);
-    height: 34px;
+    height: 40px;
     flex: 1;
-    border-radius: 2px;
+    display:flex;
+    align-items: center;
+    justify-content:center;
+    border-radius: 3px;
+    
+}
 
+.search__main-input {
+    flex: 1;
+    height: 100%;
+    border: none;
+    font-size: 1.6rem;
+    font-weight:300;
+    border-radius: 3px;
+    color: var(--text-color);
+    padding: 0 16px;
+    
 }
 
 .search__cart {
@@ -382,12 +397,38 @@
    
 }
 
+.search__main-btn {
+    background-color: #fb6445;
+    width: 60px;
+    padding: 9px;
+    margin-right: 3px;
+    margin-left: 3px;
+    border-radius: 2px;
+    border: none;
+    
+}
+
+.search__main-btn:hover {
+    background-color: #f5775d;
+    cursor: pointer;
+    
+}
+
+.search__main-btn-icon {
+    color: var(--white-color);
+    font-size: 1.4rem;
+    text-align: center;
+
+}
+
 .search__cart-icon {
     color: #fff;
     font-size: 4rem;
     text-align: center;
     
 }
+
+
 
 .navbar-horizontal {
     height: 20px;
