--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,7 @@
     animation: navbarNotificationGrowth ease-in-out 0.3s forwards;
     animation-duration: 0.3s;
     animation-direction: normal, reverse;
+    z-index: 4;
 
 }
 
