--- a/css/main.css
+++ b/css/main.css
@@ -499,9 +499,89 @@
     padding: 2px 8px;
     text-align: center;
     /* right: 2px */
+}
 
+/* Has cart list */
+.search__cart-heading {
+    text-align: left;
+    margin: 8px 0 8px 12px;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    color: #999;
+    font-weight: 400;
 
 }
+
+.search__cart-list-has {
+    list-style: none;
+    padding-left: 0px;
+
+}
+
+.search__cart-list-has-item {
+    display: flex;   
+}
+
+.search__cart-list-has-item:hover {
+    background-color: #f5f5f5;   
+}
+
+.search__cart-list-has-img {
+    width: 42px;
+    height: 42px;
+    margin: 12px;
+
+    
+}
+
+.search__cart-list-has-info {
+    width: 100%;
+    
+}
+
+.search__cart-list-has-head {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    margin-right: 12px;
+}
+
+.search__cart-list-has-name {
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    color: var(--text-color);
+    font-weight: 400;
+    /* margin-bottom: 0px; */
+    
+}
+
+.search__cart-list-has-wrap {
+    display: flex;
+    
+}
+
+.search__cart-list-has-unit {
+    color: var(--primary-color);
+    text-decoration: underline;
+   
+}
+
+.search__cart-list-has-price {
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    color: var(--primary-color);
+    font-weight: 400;
+    
+}
+
+
+.btn--primary--cart {
+    float: right;
+    margin:12px;
+    min-width: 120px;
+    
+}
+
 
 .search__main-btn {
     background-color: #fb6445;
@@ -638,3 +718,5 @@
     display: block;
 
 }
+
+
