--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .header {
-    height: 120px;
+    height: 130px;
     background-image: linear-gradient(0, #fe6332,#f53f2d );
 
 }
@@ -13,6 +13,7 @@
     list-style: none;
     padding-left: 0px;
     margin-top:8px ;
+    display: flex;
 
 }
 
@@ -65,6 +66,92 @@
     padding: 0 8px;
     position: relative;
 
+}
+
+/* user - avatar */
+
+.navbar__right-user {
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+}
+.navbar__right-user-avarta {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #999;
+}
+.navbar__right-user-name {
+    margin-left: 6px;
+    font-size: 1.4rem;
+    font-weight: 400;
+
+}
+
+.navbar__right-user-menu {
+    position: absolute;
+    list-style: none;
+    background-color: var(--white-color);
+    top: 130%;
+    right: 0px;
+    z-index: 4;
+    width: 180px;
+    padding: 0px 0px;
+    border-radius: 2px;
+    box-shadow: 0 2px 10px #ccc;
+    display: none;
+}
+
+.navbar__right-user-menu-item {
+    /* margin: 8px;
+    height: 30px; */
+
+}
+
+.navbar__right-user-menu-item a {
+    text-decoration: none;
+    color: var(--black-color);
+    font-size: 1.4rem;
+    font-weight: 300;
+    display: block;
+    padding: 10px 16px;
+
+}
+
+.navbar__right-user-menu-item a:hover {
+    cursor: pointer;
+    color: red;
+    background-color: #fafafa;
+    
+}
+
+/* Mũi tên */
+.navbar__right-user-menu::after {
+    position: absolute;
+    content:"";
+    display:block;
+    right: 20px;
+    top:-30px;
+    border: 15px solid;
+    z-index: 1;
+    border-color: transparent transparent var(--white-color)  transparent;  
+}
+
+/* Vùng đệm */
+
+.navbar__right-user-menu::before {
+    position: absolute;
+    width: 100%;
+    height:30px;
+    content:"";
+    display:block;
+    left: 0px;
+    top:-16px;  
+}
+
+.navbar__right-user:hover .navbar__right-user-menu {
+    display: block;
 }
 
 .navbar__left--item-link, .navbar__right--item-link {
