--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .header {
-    height: 130px;
+    height: 120px;
     background-image: linear-gradient(0, #fe6332,#f53f2d );
 
 }
@@ -74,16 +74,18 @@
     display: flex;
     justify-content: center;
     position: relative;
+    align-items: center;
 
 }
 .navbar__right-user-avarta {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     border-radius: 50%;
     border: 1px solid #999;
+    text-align: center;
 }
 .navbar__right-user-name {
-    margin-left: 6px;
+    margin-left: 4px;
     font-size: 1.4rem;
     font-weight: 400;
 
@@ -132,8 +134,8 @@
     content:"";
     display:block;
     right: 20px;
-    top:-30px;
-    border: 15px solid;
+    top:-20px;
+    border: 10px solid;
     z-index: 1;
     border-color: transparent transparent var(--white-color)  transparent;  
 }
@@ -156,7 +158,7 @@
 
 .navbar__left--item-link, .navbar__right--item-link {
     text-decoration: none;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     color: var(--white-color);
     font-weight: 300;
     position: relative;
@@ -217,6 +219,7 @@
     top: 150%;
     right:0;
     width: 304px;
+    border-radius: 2px;
     border: 1px solid #D3D3D3;
     background-color: var(--white-color);
     display:none;
@@ -452,6 +455,10 @@
 
 }
 
+.search--logo-link {
+    text-decoration: none;
+    color: transparent;
+}
 .search--log-img {
     width: 160px;
     color: var(--white-color);
@@ -729,7 +736,7 @@
     text-decoration: none;
     color: var(--white-color);
     font-size: 1.3rem;
-    line-height: 1.4rem;
+    line-height: 1.3rem;
 
 }
 
