--- a/css/base.css
+++ b/css/base.css
@@ -41,9 +41,15 @@ html {
     width: 16.667%;
 }
 
-.grid__column-4 {
+.grid__column-2-4 {
     padding-left: 12px;
     padding-right: 12px;
+    width: 20%;
+}
+
+.grid__column-4 {
+    padding-left: 2px;
+    padding-right: 2px;
     width: 33.334%;
 }
 
