--- a/css/main.css
+++ b/css/main.css
@@ -830,28 +830,50 @@
 }
 
 /* slider */
-.navbar__slider-a {
-    background: url('/img/slider/slide_bar.png') top center / cover no-repeat;
-    
-
-}
 
 .navbar__slider {
     background: url('/img/slider/slide_bar.png') top center / cover no-repeat;
+    min-height: 240px;  
 
 }
 
 .navbar__slider-main {
-    background-color:greenyellow;
-    height: 300px;
-   
+    /* background-color:greenyellow; */
+    margin-top: 32px;
+    background-color: yellow;
+}
 
+.navbar__slider-main-img {
+    width: 100%;
+    height: 100%;
 }
 
 .navbar__slider-add {
-    background-color: blue;
-    height: 300px;
+    margin-top: 28px;
+    height: 100%;
+    background-color: greenyellow;
+    /* display: flex;
+    flex: 1;
+    flex-direction: column ;
+    width: 100%; */
+    /* position: relative; */
     
-
+    
 }
 
+.navbar__slider-add-top {
+    /* display: block; */
+    /* flex: 1;   */
+    display: flex;
+    flex: 1;
+    flex-direction: column ;
+    width: 100%;  
+    
+}
+
+.navbar__slider-add-top-img {
+    width: 100%;
+    height: 50%; 
+    flex: 1;
+    margin-top: 4px; 
+}
