--- a/css/base.css
+++ b/css/base.css
@@ -65,6 +65,12 @@ html {
     width: 83.334%;
 }
 
+.grid__column-12 {
+    padding-left: 4px;
+    padding-right: 4px;
+    width: 100%;
+}
+
 /* Animation */
 @keyframes fadeIn {
     from {
