--- a/css/main.css
+++ b/css/main.css
@@ -863,7 +863,7 @@
     display: flex;
     flex: 1;
     flex-direction: column ;
-    width: 100%;
+    /* width: 100%; */
     height: 50%;
     padding-bottom: 4px;
     margin-bottom: 4px;
@@ -878,4 +878,68 @@
     padding-top: 0px;
     margin-bottom: 0px;
     box-sizing: border-box;
+}
+
+
+/* navbar-application */
+
+.navbar-application {
+    background-color: var(--white-color);
+    display: block;
+    padding: 16px 4px;
+    height: 110px;
+
+}
+
+.navbar-application-tech-zone {
+    height: 81px;
+    display: flex;
+    justify-content: space-around;
+    flex: 1;
+    align-items: center;
+
+}
+
+.navbar-application-tech-zone-link {
+    text-decoration: none;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    color: var(--text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: transform ease-in 0.1s;
+    will-change: transform;
+
+}
+
+.navbar-application-tech-zone-link:hover {
+    cursor: pointer;
+    transform: translateY(-2px);
+}
+
+.navbar-application-tech-zone-img {
+    height: 45px;
+    text-align: center;
+
+}
+
+.navbar-application-tech-zone-title {
+    text-align: center;
+    padding-top: 8px;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    word-wrap: break-word;
+    overflow: hidden;
+
+}
+
+
+/* navbar-banner-first */
+
+.navbar-banner-first {
+    margin-top: 24px;
 }
