--- a/css/main.css
+++ b/css/main.css
@@ -896,7 +896,7 @@
 
 .navbar__application {
     display: block;
-    margin: 10px 10px;
+    margin: 10px 1px;
     /* height: 110px; */
 }
 
@@ -980,7 +980,7 @@
 }
 
 .special-brand__produce {
-    background-color: green;
+    background-color: blue;
     width: 50%;
     margin: 0px 8px;
     /* height: 100%; */
@@ -988,8 +988,48 @@
 }
 
 .special-brand__brand {
-    background-color: blue;
+    background-color: #ffebd9;
     width: 50%;
     margin-right: 16px;
     /* height: 100%; */
+}
+
+.special-brand__header {
+    height: 60px;
+    top: -3px;
+    position: relative;
+    padding : 0px -20px;
+    /* flex: wrap; */
+    /* margin: 0px 8px; */
+    background-color: var(--white-color);
+ 
+}
+
+.special-brand__header-left {
+
+    
+
+}
+
+.special-brand__header-left-img {
+    width: 100%;
+    height: 60px;
+
+} 
+
+.special-producer__body {
+    position: absolute;
+    top: 4px;
+    left: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+
+}
+
+.special-producer__body-descriptor {
+    height : 20px;
+    width: 50%;
+    margin: auto;
 }
