--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 .header {
     height: 120px;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 6;
     background-image: linear-gradient(0, #fe6332,#f53f2d );
 
 }
@@ -833,6 +838,7 @@
 
 .navbar-main {
     background-color: #f5f5f5;
+    margin-top: 120px;
 }
 
 /* slider */ 
@@ -959,36 +965,46 @@
 /* Navbar brand and producer */
 
 .special-brand {
-    margin-top: 16px;   
+    margin-top: 16px; 
+       
+
 }
 
 .special-brand__main {
-    background-color: var(--text-color);
+    background-color: var(--white-color);
+    height: 350px; 
 }
 
 .special-brand__main-img {
-    background-color: var(--text-color);
+    background-color: var(--white-color);
+    height : 60px;
+    
 }
 
 .special-brand__header {
-    height: 60px;
+    height: 296px;
     top: -3px;
     position: relative;
     padding : 0px -20px;
     background-color: var(--white-color);
+    /* border-bottom-left-radius: 10px; 
+    border-bottom-right-radius: 10px; */
  
 }
 
 
 .special-brand__header-img {
     width: 100%;
-    height: 60px;
-
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    /* border-bottom-left-radius: 10px; 
+    border-bottom-right-radius: 10px; */
 } 
 
 .brand-producer {
     position: relative;
-    top: -40px;
+    top: -280px;
     left: 0px;
     display: flex;
     justify-content: space-between;
@@ -1009,11 +1025,12 @@
     margin-left: 28px;
     font-size: 1.6rem;
     color: var(--primary-color);
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .brand-producer__producer-add {
     margin: auto;
+    margin-right: 32px;
     font-size: 1.2rem;
     color: var(--primary-color);
     text-decoration: none;
@@ -1041,15 +1058,16 @@
     margin-left: 28px;
     font-size: 1.6rem;
     color: var(--primary-color);
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .brand-producer__brand-add {
-    margin: auto;
+    /* margin: auto; */
     font-size: 1.2rem;
     color: var(--primary-color);
     text-decoration: none;
     font-weight: 300;
+    margin-right: 32px;
 }
 
 .brand-producer__brand-add i {
@@ -1063,20 +1081,29 @@
 /* special-brand__wrap */
 
 .special-brand__wrap {
-    height: 300px;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    justify-content: space-around;
-    margin: 0 9px; 
+    position: relative;
+    top: -260px;
+    padding : 0px -24px;
+    height: 230px;
+    background-color: var(--white-color);
 }
 
+
 .special-brand__produce {
-    background-color: blue;
-    width: 50%;
-    margin: 0px 8px;
-    /* height: 100%; */
 
 }
 /* end special-brand__wrap */
 
+/* navbar__category : danh mục */
+
+.navbar__category {
+    background-color: #f5f5f5;
+    height: 200px;
+    margin-top: 24px;
+}
+
+.navbar__category--header {
+    background: var(--white-color);
+    height: 180px;
+    margin-top: 10px;
+}
