--- a/css/main.css
+++ b/css/main.css
@@ -838,7 +838,7 @@
 
 .navbar-main {
     background-color: #f5f5f5;
-    margin-top: 120px;
+    margin-top: ;
 }
 
 /* slider */ 
@@ -966,8 +966,7 @@
 
 .special-brand {
     margin-top: 16px; 
-       
-
+    height: 372px; 
 }
 
 .special-brand__main {
@@ -982,7 +981,7 @@
 }
 
 .special-brand__header {
-    height: 296px;
+    height: 286px;
     top: -3px;
     position: relative;
     padding : 0px -20px;
@@ -1099,11 +1098,11 @@
 .navbar__category {
     background-color: #f5f5f5;
     height: 200px;
-    margin-top: 24px;
+    /* margin-top: 24px; */
 }
 
 .navbar__category--header {
     background: var(--white-color);
     height: 180px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
 }
