--- a/css/main.css
+++ b/css/main.css
@@ -997,8 +997,8 @@
     height: 100%;
     margin: 0px;
     padding: 0px;
-    /* border-bottom-left-radius: 10px; 
-    border-bottom-right-radius: 10px; */
+    border-bottom-left-radius: 35px; 
+    border-bottom-right-radius: 35px;
 } 
 
 .brand-producer {
@@ -1081,16 +1081,48 @@
 
 .special-brand__wrap {
     position: relative;
-    top: -260px;
-    padding : 0px -24px;
+    top: -262px;
+    right: 10px;
     height: 230px;
-    background-color: var(--white-color);
+    /* background-color: var(--white-color); */
+    display: flex;
+    justify-content: space-around;
+    margin: 0 9px;
+    
+   
 }
-
 
 .special-brand__produce {
+    width: 100%;
+    /* background-color: var(--white-color); */
+   
+    
 
 }
+
+.special-brand__produce-list {
+    /* background-color: green; */
+    height: 230px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.produce__good-list {
+    background-color: blue;
+    height: 100%;
+    width: 100%;
+    margin: 0 1px;
+    
+
+
+}
+
+
+
 /* end special-brand__wrap */
 
 /* navbar__category : danh mục */
@@ -1098,7 +1130,7 @@
 .navbar__category {
     background-color: #f5f5f5;
     height: 200px;
-    /* margin-top: 24px; */
+    margin-top: 0px;
 }
 
 .navbar__category--header {
