--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,26 @@
 
 }
 
+.navbar__notification-title {
+    position: absolute;
+    color: var(--primary-color);
+    background-color: var(--white-color);
+    top: -8px;
+    left: 14px;
+    font-size: 0.8rem;
+    line-height: 0.8rem;
+    border-radius: 8px;
+    border: 2px solid #ee4d2d;
+    padding: 2px 5px;
+    text-align: center;
+    /* right: 2px */
+
+}
+
+.navbar__right--item-link-icon {
+    margin: 0 4px;
+}
+
 @keyframes navbarNotificationGrowth {
     from {
         opacity: 0;
