fix menu application

--- a/css/main.css
+++ b/css/main.css
@@ -966,6 +966,7 @@
 }
 
 .navbar__application-tech-zone-title {
+    min-height: 31px;
     text-align: center;
     padding-top: 8px;
     display: -webkit-box;
