--- a/css/main.css
+++ b/css/main.css
@@ -1141,11 +1141,75 @@
     height: 100%;
     width: 100%;
     margin: 0 1px;
-    
+    padding: 15px 15px;
+}
 
+
+.produce__good-list-item {
+    text-decoration: none;
+    color: var(--primary-color);
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    font-weight: 400;
+    text-align: center;
+    position: relative;
+}
+
+.produce__good-list-img {
+    width: 100%;
+    /* height: 162px; */
+}
+
+.produce__good-list-item-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
 
 }
 
+.produce__good-list-unit {
+    /* margin: auto; */
+
+}
+
+.produce__good-list-prince {
+    /* margin: auto; */
+
+}
+
+.produce__good-list-promotions {
+    position: absolute;
+    top: -161px;
+    right: -15px;
+    width: 52px;
+    height: 46px;
+    background-color: rgba(255, 215, 57, 1);
+
+}
+
+.produce__good-list-promotions::after {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: -6px;
+    border-width: 0px 26px 6px;
+    border-style: solid;
+    border-left: 26px solid transparent;
+    color: rgba(255, 215, 57, 1);
+    border-color: transparent currentColor transparent currentColor;
+}
+.produce__good-list-promotions-title {
+    display: block;
+    margin: 4px 0px;
+
+}
+
+.produce__good-list-promotions-reduce {
+    color: var(--white-color)
+    
+
+}
 
 
 /* end special-brand__wrap */
