--- a/css/main.css
+++ b/css/main.css
@@ -991,12 +991,13 @@
 
 .special-brand {
     margin-top: 16px; 
-    height: 372px; 
+    /* height: 372px;  */
 }
 
 .special-brand__main {
     background-color: var(--white-color);
-    height: 350px; 
+    /* height: 350px;  */
+    position: relative;
 }
 
 .special-brand__main-img {
@@ -1006,7 +1007,7 @@
 }
 
 .special-brand__header {
-    height: 286px;
+    /* height: 286px; */
     top: -3px;
     position: relative;
     padding : 0px -20px;
@@ -1018,8 +1019,8 @@
 
 
 .special-brand__header-img {
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     margin: 0px;
     padding: 0px;
     border-bottom-left-radius: 35px; 
@@ -1028,12 +1029,14 @@
 
 .brand-producer {
     position: relative;
-    top: -280px;
+    top: 80px;
     left: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+    width: 100%;
+    position: absolute;
     
 }
 
@@ -1105,14 +1108,15 @@
 /* special-brand__wrap */
 
 .special-brand__wrap {
-    position: relative;
-    top: -262px;
-    right: 10px;
-    height: 230px;
+    position: absolute;
+    top: 126px;
+    right: 39px;
+    /* height: 230px; */
     /* background-color: var(--white-color); */
     display: flex;
     justify-content: space-around;
-    margin: 0 8px;
+    margin-left: -4px;
+    margin-right: -24px;
     
    
 }
@@ -1127,7 +1131,7 @@
 
 .special-brand__produce-list {
     /* background-color: green; */
-    height: 230px;
+    /* height: 230px; */
     margin-left: 10px;
     margin-right: 10px;
     width: 100%;
@@ -1138,10 +1142,11 @@
 
 .produce__good-list {
     background-color: var(--white-color);
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     margin: 0 1px;
     padding: 15px 15px;
+    position: relative;
 }
 
 
@@ -1152,7 +1157,7 @@
     line-height: 1.6rem;
     font-weight: 400;
     text-align: center;
-    position: relative;
+    /* position: relative; */
 }
 
 .produce__good-list-img {
@@ -1160,11 +1165,21 @@
     /* height: 162px; */
 }
 
+.produce__good-list-img-test {
+    /* background-image: url('/img/Better-produce/producer1.jpg'); */
+    padding-top: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+
+}
+
 .produce__good-list-item-title {
     display: flex;
     justify-content: center;
     margin-top: 10px;
     flex-direction: row;
+    
     /* align-self: flex-end; */
 
 }
@@ -1173,8 +1188,6 @@
     font-size: 1.2rem;
     line-height: 1.2rem;
     font-weight: 400;
-  
-
 }
 
 .produce__good-list-prince {
@@ -1184,10 +1197,11 @@
 
 .produce__good-list-promotions {
     position: absolute;
-    top: -161px;
-    right: -15px;
+    top: 0px;
+    /* left: 123px; */
+    right: 0px;
     width: 52px;
-    height: 46px;
+    height: 42px;
     background-color: rgba(255, 215, 57, 1);
 
 }
@@ -1206,11 +1220,19 @@
 .produce__good-list-promotions-title {
     display: block;
     margin: 4px 0px;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    font-weight: 400;
+    position: relative;
 
 }
 
 .produce__good-list-promotions-reduce {
-    color: var(--white-color)
+    color: var(--white-color);
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    font-weight: 400;
+    position: relative;
     
 
 }
@@ -1223,11 +1245,11 @@
 .navbar__category {
     background-color: #f5f5f5;
     height: 200px;
-    margin-top: 0px;
+    /* margin-top: 10px; */
 }
 
 .navbar__category--header {
     background: var(--white-color);
     height: 180px;
-    /* margin-top: 10px; */
+    margin-top: 10px;
 }
