--- a/css/main.css
+++ b/css/main.css
@@ -985,6 +985,16 @@
     margin-top: 16px;
     margin-left: 0px;
     padding-left: 0px;
+    width: 100%;
+    height: 110px;
+}
+
+.navbar__banner-first-img {
+    padding-top: 10%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 100%;  
 }
 
 /* Navbar brand and producer */
@@ -1003,6 +1013,11 @@
 .special-brand__main-img {
     background-color: var(--white-color);
     height : 60px;
+    width: 100%;
+    /* padding-top: 25%; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center
     
 }
 
@@ -1244,12 +1259,48 @@
 
 .navbar__category {
     background-color: #f5f5f5;
-    height: 200px;
+    height: 400px;
     /* margin-top: 10px; */
 }
 
-.navbar__category--header {
+
+.navbar__category--header-title {
+    width: 100%;
+    background-color: var(--white-color);
+    line-height: 2rem;
+    font-size: 2rem;
+    color: var(--text-color);
+    padding: 16px 32px;
+    float: left;
+    height: 62px;
+    font-weight: 300;
+    border-bottom: 1px solid #f2f2f2;
+
+    
+}
+
+.navbar__category--body {
     background: var(--white-color);
-    height: 180px;
-    margin-top: 10px;
+    height: 300px;
+    width: 100%;
+}
+
+.navbar__category--body-one {
+    border: 1px solid #f2f2f2;
+    width: 100%; 
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+}
+
+.navbar__category-men-fashion {
+    border: 1px solid #f2f2f2;
+    width: 100%;
+
+}
+
+.navbar__category-men-fashion-img {
+    width: 100%;
 }
