--- a/css/main.css
+++ b/css/main.css
@@ -926,18 +926,23 @@
 
 .navbar__application {
     display: block;
-    margin: 10px 1px;
+    margin: 10px 4px;
+    
     /* height: 110px; */
 }
 
-.navbar__application-tech-zone {
+.navbar__application-tech-main {
     height: 110px;
     display: flex;
     justify-content: space-around;
     flex: 1;
-    align-items: center;
     background-color: var(--white-color);
-    
+    align-items: center;
+
+}
+
+.navbar__application-tech-zone {  
+    background-color: var(--white-color); 
 }
 
 .navbar__application-tech-zone-link {
