--- a/css/main.css
+++ b/css/main.css
@@ -552,7 +552,7 @@
 
 .search__cart-list {
     position: absolute;
-    top: 110%;
+    top: 130%;
     right: 2px;
     background-color: var(--white-color);
     width: 380px;
@@ -584,9 +584,9 @@
     position: absolute;
     content: "";
     display: block;
-    right: 8px;
-    top:-30px;
-    border-width: 20px 26px;
+    right: 0px;
+    top: -29px;
+    border-width: 20px 22px;
     border-style: solid;
     cursor: pointer;
     border-color: transparent transparent var(--white-color)  transparent;
@@ -905,8 +905,8 @@
     flex-direction: column ;
     /* width: 100%; */
     height: 50%;
-    padding-bottom: 4px;
-    margin-bottom: 4px;
+    padding-bottom: 1px;
+    margin-bottom: 1px;
     
 }
 
@@ -1265,7 +1265,7 @@
 .navbar__category {
     background-color: #f5f5f5;
     height: 400px;
-    /* margin-top: 10px; */
+    margin-top: 24px;
 }
 
 
