--- a/css/grid.css
+++ b/css/grid.css
@@ -156,6 +156,7 @@
   }
 
   .m-1,
+  .m-1-10,
   .m-2,
   .m-3,
   .m-4,
@@ -173,6 +174,10 @@
   .m-1 {
       flex: 0 0 8.33333%;
       max-width: 8.33333%;
+  }
+  .m-1-10 {
+    flex: 0 0 10%;
+    max-width: 10%;
   }
 
   .m-2 {
@@ -302,6 +307,7 @@
   }
 
   .l-1,
+  .l-1-10,
   .l-2,
   .l-2-4,
   .l-3,
@@ -320,6 +326,10 @@
   .l-1 {
       flex: 0 0 8.33333%;
       max-width: 8.33333%;
+  }
+  .l-1-10 {
+    flex: 0 0 10%;
+    max-width: 10%;
   }
 
   .l-2 {
@@ -465,6 +475,7 @@
   }
 
   .wide .l-1,
+  .wide .l-1-10,
   .wide .l-2,
   .wide .l-2-4,
   .wide .l-3,
@@ -483,6 +494,11 @@
   .wide .l-1 {
       flex: 0 0 8.33333%;
       max-width: 8.33333%;
+  }
+  .wide .l-1-10 {
+    flex: 0 0 10%;
+    max-width: 10%;
+
   }
 
   .wide .l-2 {
