--- a/css/main.css
+++ b/css/main.css
@@ -346,7 +346,7 @@
     display: block;
     font-size: 1.2rem;
     padding-top: 4px;
-    line-height 1.4em;
+    line-height: 1.2rem;
 
 }
 
@@ -552,7 +552,7 @@
 
 .search__cart-list {
     position: absolute;
-    top: 130%;
+    top: 110%;
     right: 2px;
     background-color: var(--white-color);
     width: 380px;
