--- a/css/main.css
+++ b/css/main.css
@@ -1311,3 +1311,73 @@
 .navbar__category-men-fashion-img {
     width: 100%;
 }
+
+
+/* modal--input */
+
+.modal--input {
+    display: flex;
+    z-index: 9;
+
+}
+
+.modal--input.close{
+    display: none;
+}
+
+.modal__overlay--input {
+    z-index: 8;
+    width: 100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    /* background-color: rgba(0, 0, 0, 0.4); */
+
+
+}
+
+.modal__body--input {
+    background-color: transparent;
+    z-index: 8;
+    margin: auto;
+    width: 500px; 
+    height: 500px;
+
+}
+
+.modal--input-header {
+    position: absolute;
+    display: flex;
+    top: -20px;
+    right: 0;
+    width: 10%;
+    height: 10%;
+    cursor: pointer;
+    background-color: var(--white-color);
+    border: 1px solid #D3D3D3;
+    border-radius: 50%;
+    
+}
+
+.modal--input-header-container {
+    
+}
+
+.modal--input-header-icon {
+    font-size: 3rem;  
+    margin: auto;  
+}
+
+.modal--input-info {
+    width: 100%; 
+}
+
+.modal--input-info-img {
+    padding-top: 110%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 100%;  
+    
+}
